--- a/talky-app/package.json
+++ b/talky-app/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@algolia/autocomplete-js": "^1.7.1",
+    "@algolia/autocomplete-theme-classic": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@userfront/core": "^0.4.6",
+    "algoliasearch": "^4.14.2",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.2.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-instantsearch-dom": "^6.35.0",
+    "react-instantsearch-hooks-web": "^6.35.0",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "typescript": "^4.8.4",
+    "use-immer": "^0.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
